--- a/src/app/expense/add-edit-expence/add-edit-expence.component.html
+++ b/src/app/expense/add-edit-expence/add-edit-expence.component.html
@@ -41,10 +41,10 @@
             <!-- split condition  -->
             <label for="split">Split:</label>
             <select class="form-control" id="split" name="split">
-          <option value="equal">Split equally</option>
-          <option value="unequal">Split unequally</option>
-          <option value="shares">Split by shares</option>
-        </select>
+                <option value="equal">Split equally</option>
+                <option value="unequal">Split unequally</option>
+                <option value="shares">Split by shares</option>
+            </select>
         </div>
 
         <!-- form control -->
@@ -57,9 +57,9 @@
         <!-- form control -->
 
         <!-- submit -->
-        <button type="submit" class="btn btn-primary">Add Expense</button>
-
-        <!-- modal close button -->
-        <button type="button" class="btn btn-secondary">Cancel</button>
+        <div class="modal-footer">
+            <button type="submit" class="btn btn-primary">Add Expense</button>
+            <button type="button" class="btn btn-secondary">Cancel</button>
+        </div>
     </form>
 </main>
