--- a/src/app/friends/view-friends-list/view-friends-list.component.html
+++ b/src/app/friends/view-friends-list/view-friends-list.component.html
@@ -32,13 +32,14 @@
             </div>
         </div>
 
-        <!-- expenses of this roup will be displayed here -->
+        <!-- expenses of this group will be displayed here -->
 
         <div class="card card-body" data-bs-toggle="collapse" data-bs-target="#collapseExpense" routerLink="/dashboard/friends/expense">
             <div class="row">
                 <div class="col">
                     <!-- collapse toggle on click on heading -->
                     <h3 routerLink="/dashboard/friends/expense" data-bs-toggle="collapse" data-bs-target="#collapseExpense">Expenses:</h3>
+                    <small>Click here to see the Expenses</small>
                 </div>
                 <div class="col text-end">
                     <button class="btn btn-primary" routerLink="/dashboard/friends/expense/add" data-bs-toggle="modal" data-bs-target="#addExpenseForm">Add Expense </button>
@@ -65,4 +66,7 @@
             </div>
         </div>
     </div>
+
+
+    <!-- sett -->
 </div>
