--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,18 +6,20 @@
         <a class="navbar-brand" href="#">SplitWise</a>
 
         <!-- toggler button -->
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
         <!-- nav bar links if not login -->
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav" *ngIf="isLoginSignupActive">
             <ul class="navbar-nav">
-                <li class="nav-item" *ngIf="!isLoginActive">
-                    <button class="btn btn-primary ml-md-2" routerLink="/login">Login</button>
+                <li class="nav-item">
+                    <button class="btn text-light ml-md-2" routerLink="/login" [class.d-none]="isLoginActive">Login</button>
                 </li>
-                <li class="nav-item" *ngIf="!isSignupActive">
-                    <button class="btn btn-primary ml-md-2" type="button" routerLink="/signup">Sign Up</button>
+                <li class="nav-item">
+                    <button class="btn btn-primary ml-md-2" type="button" routerLink="/signup" [class.d-none]="isSignupActive">Sign Up</button>
                 </li>
             </ul>
         </div>
@@ -27,9 +29,10 @@
             <ul class="navbar-nav">
                 <li class="nav-item ">
                     <div class="dropdown">
-                        <button class="btn text-light dropdown-toggle" type="button" id="profileDropdown" data-bs-toggle="dropdown">
-                    Dropdown button
-                  </button>
+                        <button class="btn text-light dropdown-toggle" type="button" id="profileDropdown"
+                            data-bs-toggle="dropdown">
+                            <i class="fa-regular fa-user"></i>
+                        </button>
                         <ul class="dropdown-menu">
                             <li *ngFor="let dropdownMenu of dropdownMenus">
                                 <a class="dropdown-item" href="#">{{dropdownMenu}}</a>
@@ -61,7 +64,8 @@
     <div class="bg-dark" *ngIf="!isLoginSignupActive">
 
         <ul class="navbar-nav text-white container  p-4">
-            <li class="nav-item" *ngFor="let dropdownMenu of dropdownMenus"><a class="dropdown-item" href="#">{{dropdownMenu}}</a></li>
+            <li class="nav-item" *ngFor="let dropdownMenu of dropdownMenus"><a class="dropdown-item"
+                    href="#">{{dropdownMenu}}</a></li>
         </ul>
 
     </div>
